--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ video {
 
 .App {
 
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);;
 
 }
 .container {
@@ -30,7 +30,7 @@ width: 100%;
 padding: 12px 24px;
 background-color: transparent;
 color: #575756;
-box-shadow: inset 0px 0px 0px 4px #ddd6e8;
+box-shadow: inset 0px 0px 0px 5px #bcf8a1;
 }
 .list {
   display: flex;
@@ -39,16 +39,53 @@ box-shadow: inset 0px 0px 0px 4px #ddd6e8;
   list-style:none;
 }
 li {
-  background-color: #ddd6e8;
+  background-color: #bcf8a1;
   padding: 10px;
   margin: 10px;
 }
 .icon {
-width: 30px;
+width: 20px;
+margin-right: 8px;
+}
+.ingredients {
+  display: flex;
+  align-items: center;
 }
 button {
 margin-top: 10px;
+margin-bottom: 10px;
 border-radius: 12px;
 border: none;
 background-color: #dbecc4;
+}
+button:hover {
+  background-color:#9fc583;
+  border: 2px solid #027402;
+}
+
+.pan {
+ margin-top: 7px;
+ margin-right: 2px;
+}
+h1 {
+  margin-top: 28px;
+  font-size: 34px;
+  color: #e83200;
+}
+b {
+  font-size: 21px;
+  color: red;
+  margin-bottom: 20px;
+}
+h2 {
+  color:rgb(0, 58, 1);
+  margin-bottom: -5px;
+}
+h1, h2, b {
+  font-family: "Montserrat", sans-serif;
+}
+.type {
+  font-size: 21px;
+  color:#027402;
+  text-transform: capitalize;
 }
